--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     />
 
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/src/css/style.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
   </head>
   <body>
     <!-- Navbar Section -->
@@ -138,6 +138,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 
     <!-- Custom JS -->
-    <script src="/src/js/app.js"></script>
+    <script src="./src/js/app.js"></script>
   </body>
 </html>
