--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
     <nav class="navbar navbar-expand-lg navbar-light navbar-custom">
       <div class="container-fluid">
         <!-- Brand Logo or Name -->
-        <a class="navbar-brand navbar-brand-custom" href="#"
-          >MA SOLAR ENERGY</a
-        >
+        <a class="navbar-brand navbar-brand-custom" href="#">MA SOLAR ENERGY</a>
 
         <!-- Toggle Button for Mobile View -->
         <button
@@ -105,11 +103,60 @@
       </div>
     </section>
 
-    <!-- Services Section -->
-    <section class="section-custom" id="services">
-      <h2 class="section-header">Our Services</h2>
-      <p>Details about the services offered.</p>
-      <!-- Content here -->
+    <section id="services" class="services-section py-5">
+      <div class="container">
+        <h2 class="section-title text-center mb-5">Our Services</h2>
+        <div class="row">
+          <!-- Service Card 1 -->
+          <div class="col-12 col-md-4 mb-4 service-card">
+            <div class="card h-100">
+              <div class="card-body">
+                <div class="icon-container">
+                  <i class="fas fa-solar-panel service-icon"></i>
+                </div>
+                <h4 class="card-title">Solar Panel Installation</h4>
+                <p class="card-text">
+                  We offer high-quality solar panel installations for
+                  residential and commercial properties to harness the power of
+                  the sun efficiently.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Service Card 2 -->
+          <div class="col-12 col-md-4 mb-4 service-card">
+            <div class="card h-100">
+              <div class="card-body">
+                <div class="icon-container">
+                  <i class="fas fa-bolt service-icon"></i>
+                </div>
+                <h4 class="card-title">Inverter Services</h4>
+                <p class="card-text">
+                  Expert inverter installation and repair services to ensure
+                  your solar system operates at optimal efficiency.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <!-- Service Card 3 -->
+          <div class="col-12 col-md-4 mb-4 service-card">
+            <div class="card h-100">
+              <div class="card-body">
+                <div class="icon-container">
+                  <i class="fas fa-plug service-icon"></i>
+                </div>
+                <h4 class="card-title">DC Electronics Repair</h4>
+                <p class="card-text">
+                  Specialized in DC electronics repair and maintenance to keep
+                  your system running smoothly and reliably.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- Projects Section -->
